// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/api/enterprises DELETE / /:enterpriseId/accounts/:accountId - delete enterprise account 1`] = `
Object {
  "entities": Object {},
}
`;

exports[`/api/enterprises GET / / - get enterprises 1`] = `
Object {
  "entities": Object {
    "enterprises": Object {
      "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "name": "Test Enterprise",
        "plan": "GROWTH",
      },
    },
  },
  "result": Array [
    "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
  ],
}
`;

exports[`/api/enterprises GET / /:enterpriseId - retrieve enterprise 1`] = `
Object {
  "entities": Object {
    "enterprises": Object {
      "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4": Object {
        "id": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "name": "Test Enterprise",
        "plan": "GROWTH",
      },
    },
  },
  "result": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
}
`;

exports[`/api/enterprises GET / /:enterpriseId/accounts - retrieve enterprise accounts 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "bookingWidgetPrimaryColor": null,
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "city": null,
        "clinicName": null,
        "contactEmail": null,
        "country": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "name": "Test Account",
        "phoneNumber": null,
        "state": null,
        "street": null,
        "syncClientAdapter": null,
        "timeInterval": null,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": null,
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "website": null,
        "weeklyScheduleId": null,
        "zipCode": null,
      },
    },
  },
  "result": Array [
    "62954241-3652-4792-bae5-5bfed53d37b7",
  ],
}
`;

exports[`/api/enterprises POST / /:enterpriseId/accounts - create account under enterprise 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "1fa3a399-5a41-42d9-b2c8-59df666ec7ea": Object {
        "EnterpriseId": null,
        "bookingWidgetPrimaryColor": null,
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "city": null,
        "clinicName": null,
        "contactEmail": null,
        "country": null,
        "destinationPhoneNumber": null,
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "id": "1fa3a399-5a41-42d9-b2c8-59df666ec7ea",
        "lastSyncDate": null,
        "logo": null,
        "name": "Test Account 2",
        "phoneNumber": null,
        "state": null,
        "street": null,
        "syncClientAdapter": null,
        "timeInterval": null,
        "timezone": "Africa/Bamako",
        "unit": 15,
        "website": null,
        "zipCode": null,
      },
    },
  },
  "result": "1fa3a399-5a41-42d9-b2c8-59df666ec7ea",
}
`;

exports[`/api/enterprises PUT / /:enterpriseId/accounts/:accountId - update account 1`] = `
Object {
  "entities": Object {
    "accounts": Object {
      "62954241-3652-4792-bae5-5bfed53d37b7": Object {
        "EnterpriseId": null,
        "bookingWidgetPrimaryColor": null,
        "callrailId": null,
        "canSendRecalls": false,
        "canSendReminders": false,
        "canSendReviews": false,
        "city": null,
        "clinicName": null,
        "contactEmail": null,
        "country": null,
        "destinationPhoneNumber": "+16041234567",
        "enterpriseId": "c5ab9bc0-f0e6-4538-99ae-2fe7f920abf4",
        "id": "62954241-3652-4792-bae5-5bfed53d37b7",
        "lastSyncDate": null,
        "logo": null,
        "name": "Updated",
        "phoneNumber": null,
        "state": null,
        "street": null,
        "syncClientAdapter": null,
        "timeInterval": null,
        "timezone": "America/Vancouver",
        "twilioPhoneNumber": null,
        "unit": 15,
        "vendastaAccountId": null,
        "vendastaId": null,
        "website": null,
        "weeklyScheduleId": null,
        "zipCode": null,
      },
    },
  },
  "result": "62954241-3652-4792-bae5-5bfed53d37b7",
}
`;
